# BEcon_4222_Introduction_Programming

./: README.md  _quarto.yml  fred_mini.db  index.qmd
_freeze/course_materials/week_01/01a_introduction/execute-results/: html.json
_freeze/course_materials/week_01/01b_gettingstarted/execute-results/: html.json
_freeze/course_materials/week_02/02_versioncontrol/execute-results/: html.json
_freeze/course_materials/week_03/03_versioncontrolwithothers/execute-results/: html.json
_freeze/exercise_sessions/week_09/E09_RelationalDB/execute-results/: html.json
admin/source/: syllabus_v1.typ
assets/img/: illustrations_asallin.excalidraw
assets/img/lecture11_conclusion/: illustration.excalidraw
assets/img/lecture_09_db/: data_file_vs_service.excalidraw  er_diagram_week09.excalidraw
assets/img/lecture_10_queries/: week10.excalidraw
assets/style/: hsgtheme.scss
course_materials/week_05/data/: cleaned_countries_data.csv  cleaned_countries_data.pkl
course_materials/week_09/: 09_databases.qmd  demo_countries_trade.py  trade.db
course_materials/week_09/data/: countries.csv  countries_raw.csv  trade_flows.csv  trade_flows_raw.csv
course_materials/week_10/: .gitignore  10_queries.qmd  build_cepii_db.py  wdi_mini.db
course_materials/week_11/: 11_conclusion.qmd  build_wdi.py  db_connection_examples.py  wdi.db
exercise_sessions/week_09/: .gitignore  E09_RelationalDB.qmd  pyproject.toml  script.py
