[project]
name = "week-09"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "fredapi>=0.5.2",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
]
